--- a/README.adoc
+++ b/README.adoc
@@ -711,12 +711,29 @@ http://wiki.osdev.org/Shutdown
 
 === Reboot
 
-link:reboot.S[]
+http://stackoverflow.com/questions/32682152/how-to-reboot-in-x86-assembly-from-16-bit-real-mode
+
+Infinite reboot loop on emulator!
+
+....
+./run reboot
+....
+
+TODO why does it work?
 
 === APM
 
-* link:apm_shutdown.S[]
-* link:apm_shutdown2.S[]
+Turn on and immediately shutdown the system closing QEMU:
+
+....
+./run apm_shutdown
+....
+
+Fancier version copied from http://wiki.osdev.org/APM (TODO why is that better):
+
+....
+./run apm_shutdown2
+....
 
 https://en.wikipedia.org/wiki/Advanced_Power_Management
 
@@ -727,6 +744,13 @@ Older than <<acpi>> and simpler.
 By Microsoft in 1995. Spec seems to be in RTF format...
 
 Can't find the URL. A Google cache: https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&ved=0CB0QFjAAahUKEwj7qpLN_4XIAhWCVxoKHa_nAxY&url=http%3A%2F%2Fdownload.microsoft.com%2Fdownload%2F1%2F6%2F1%2F161ba512-40e2-4cc9-843a-923143f3456c%2FAPMV12.rtf&usg=AFQjCNHoCx8gHv-w08Dn_Aoy6Q3K3DLWRg&sig2=D_66xvI7Y2n1cvyB8d2Mmg
+
+Bibliography:
+
+* http://wiki.osdev.org/Shutdown
+* http://stackoverflow.com/questions/21463908/x86-instructions-to-power-off-computer-in-real-mode
+* http://stackoverflow.com/questions/678458/shutdown-the-computer-using-assembly
+* http://stackoverflow.com/questions/3145569/how-to-power-down-the-computer-from-a-freestanding-environment
 
 === ACPI
 
@@ -886,9 +910,23 @@ https://stackoverflow.com/questions/18717016/what-are-ring-0-and-ring-3-in-the-c
 
 ==== SMP
 
-link:smp.S[]
+http://stackoverflow.com/questions/980999/what-does-multicore-assembly-language-look-like/33651438#33651438
 
 Symmetric multiprocessing https://en.wikipedia.org/wiki/Symmetric_multiprocessing
+
+....
+./run smp
+....
+
+Outcome:
+
+....
+SMP started
+....
+
+Implies that SMP worked because a spinlock was unlocked by the second processor.
+
+Try commenting out waking up the second processor and see it not get printed.
 
 ==== Paging
 
@@ -905,11 +943,26 @@ Outcome:
 00005678
 ....
 
+Implies that paging worked because we printed and modified the same physical address with two different virtual addresses.
+
 Requires <<protected-mode>>.
 
 ===== Page fault
 
-link:page_fault.S[]
+Generate and handle a page fault:
+
+....
+./run page_fault
+....
+
+Outcome:
+
+....
+Page fault handled. Error code:
+00000002
+....
+
+This is printed from a page fault handler that we setup an triggered by writing to an unmapped address.
 
 === IA-32e mode
 
@@ -991,14 +1044,33 @@ https://en.wikipedia.org/wiki/VESA_BIOS_Extensions
 
 TODO use it.
 
-== Testing
+== Tests
 
 === Unit tests
 
 Tests for utilities defined in this repo, as opposed to x86 or external firmware concepts.
 
-* link:test_print_bytes.S[PRINT_BYTES]
-* link:test_pit_sleep.S[PIT_SLEEP]
+==== PRINT_BYTES
+
+....
+./run test_print_bytes
+....
+
+Outcome:
+
+....
+40 41 42 43 44 45 46 47
+48 49 4A 4B 4C 4D 4E 4F
+50
+....
+
+==== PIT_SLEEP_TICKS
+
+....
+./run test_pit_sleep_ticks
+....
+
+Outcome: print `a\n` with frequency 2Hz.
 
 === Test hardware
 
@@ -1183,7 +1255,7 @@ Raspberry PI:
 
 == TODO
 
-Stuff here is too messy to put on the main README, need either cleanup or a working example:
+Stuff here is too messy or useless to put on the main README, either cleanup or add a working example:
 
 * link:TODO.adoc[]
 * link:intel-startup/[]
